# lunex

./: .gitignore  AGENTS.md  BACKEND_ARCH.md  BACKEND_ISSUES.md  CONTRIBUTING.md  DEVELOPMENT.md  FRONTEND_ARCH.md  FRONTEND_ISSUES.md  README.md  SECURITY_POLICY.md  i18next-scanner.config.cjs  package-lock.json  package.json  typecheck_log.txt  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/agent/: commands.rs  manager.rs
src-tauri/src/commands/: chat.rs  hub.rs  llm_connection.rs  message.rs  mod.rs  usage.rs  workspace.rs
src-tauri/src/constants/: commands.rs  events.rs
src-tauri/src/db/: migrations.rs
src-tauri/src/error/: app_error.rs
src-tauri/src/events/: mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/addon/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/features/agent/: common.rs  downloader.rs  manager.rs
src-tauri/src/features/app_settings/: commands.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/features/chat/: commands.rs  emitter.rs  mod.rs  models.rs  prompts.rs  repository.rs  service.rs
src-tauri/src/features/hub/: commands.rs  mcp_config.rs  mod.rs  models.rs  service.rs
src-tauri/src/features/llm_connection/: commands.rs  repository.rs  service.rs
src-tauri/src/features/mcp_connection/: commands.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/features/message/: commands.rs  emitter.rs  (+4 more)
src-tauri/src/lib/: sentry_helpers.rs
src-tauri/src/models/: llm_connection.rs  llm_types.rs  mod.rs  usage.rs
src-tauri/src/repositories/: llm_connection_repository.rs  mod.rs  usage_repository.rs
src-tauri/src/services/: chat_service.rs  hub_service.rs  llm_connection_service.rs  llm_service.rs  mcp_tool_refresh_service.rs  mod.rs  tool_service.rs  usage_service.rs  workspace_settings_service.rs
src-tauri/src/state/: app_state.rs
(+416 files in other folders)
