[package]
name = "nexo"
version = "0.1.0-alpha.36"
description = "A smart AI assistant for everyone"
authors = ["Thanh Nguyen"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nexo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rust-mcp-sdk = "0.7"
rust-mcp-transport = "0.6"
rust-mcp-schema = "0.6"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tauri-plugin-clipboard-manager = "2"
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
serde_yaml = "0.9"
ts-rs = "9.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
sha2 = "0.10.9"
hex = "0.4.3"
shell-words = "1.1.1"
sentry = { version = "0.34", features = ["backtrace", "contexts", "panic", "anyhow", "debug-images"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.24.0"
base64 = "0.22.1"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
too_many_lines = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"

[lints.rust]
unsafe_code = "warn"
unused_mut = "warn"
dead_code = "warn"

[dev-dependencies]
tempfile = "3.24.0"
